--- a/src/Clients/Web/index.html
+++ b/src/Clients/Web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Parts Unlimited</title>
+    <title>Parts Unlimited MRP</title>
 
     <!-- WinJS references -->
     <link href="winjs/css/ui-light.css" rel="stylesheet" />
